--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -27,7 +27,7 @@
 
 </div>
 
-<div class="overlay">
+<!--<div class="overlay">
     <nav class="main_nav">
         <ul>
             <li><a href="#">home</a></li>
@@ -38,7 +38,7 @@
             <li><a href="#">contact</a></li>
         </ul>
     </nav>
-</div>
+</div>-->
 
 <div class="banner_img_container grid-x">
     <h2 class="small-12 medium-12 large-12 cell">Hello, I'm Shan Jiang.</h2>
