--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -1,52 +1,18 @@
 <!doctype html>
-<html class="no-js" lang="en" dir="ltr">
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Foundation for Sites</title>
-<link rel="stylesheet" href="style/foundation.css">
-<link rel="stylesheet" href="style/app.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>S H A N</title>
+<link rel="stylesheet" href="css/foundation.css">
+<link rel="stylesheet" href="css/app.css">
+<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-<div class="header_container grid-x">
-    <div class="page_title small-4 medium-4 large-4 cell">
-        <a href="#"><h2>home</h2></a>
-    </div>
-    <div class="logo_wrap small-4 medium-4 large-4 cell">
-        <img src="images/shan-logo-3.0-name.svg" alt="SHAN Logo" class="shan_logo">
-    </div>
-    <div class="hamburger_button small-4 medium-4 large-4 cell">
-        <div class="hamburger_button_wrap">
-            <div class="top"></div>
-            <div class="mid"></div>
-            <div class="bot"></div>
-        </div>
-    </div>
-
-</div>
-
-<div class="overlay">
-    <nav class="main_nav">
-        <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">service</a></li>
-            <li><a href="#">portfolio</a></li>
-            <li><a href="#">advantage</a></li>
-            <li><a href="#">contact</a></li>
-        </ul>
-    </nav>
-</div>
-
-<div class="banner_img_container grid-x">
-    <h2 class="small-12 medium-12 large-12 cell">Hello, I'm Shan Jiang.</h2>
-    <div class="small-12 medium-12 large-12 cell">
-        <p class="scroll_about">about</p>
-    </div>
-    <div class="scroll_down">
-    </div>
+<div class="nav_wrap">
+    123
 </div>
 
 <script src="js/vendor/jquery.js"></script>
