--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -7,17 +7,54 @@
 <title>S H A N</title>
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="css/app.css">
+<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,800" rel="stylesheet">
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<h1 class="hide">S H A N</h1>
+<div class="header_bar_container grid-x">
+    <div class="title_wrap small-4 medium-3 large-2 cell">
+        <p>home</p>
+    </div>
+    <div class="logo_wrap small-4 medium-6 large-8 cell">
+        <img src="images/shan-logo-3.0-name-white.svg" alt="SHAN Logo" id="header_logo">
+    </div>
+    <div class="burger_button_wrap small-4 medium-3 large-2 cell">
+        <div class="burger_button">
+            <div class="top"></div>
+            <div class="mid"></div>
+            <div class="bot"></div>
+        </div>
+    </div>
+    <div class="nav_overlay">
+        <nav>
+            <h2 class="hide">Main Nav</h2>
+            <ul>
+                <li><a href="#">apple</a></li>
+                <li><a href="#">banana</a></li>
+                <li><a href="#">orange</a></li>
+                <li><a href="#">peach</a></li>
+                <li><a href="#">watermelon</a></li>
+                <li><a href="#">avocado</a></li>
+                <li><a href="#">blueberry</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
 
-<div class="nav_wrap">
-    123
+<div class="header_image_container grid-x">
+    <h2 class="cell">Hello, I'm Shan Jiang.</h2>
+    <div class="scroll-to cell">
+        <p>about</p>
+        <div></div>
+    </div>
+
 </div>
 
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
 <script src="js/app.js"></script>
+<script src="js/header.js"></script>
 </body>
 </html>
