--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -50,12 +50,12 @@
     </div>
 </div>
 
-<div class="about_container grid-x grid-margin-x">
+<div class="about_container grid-x grid-padding-x">
     <h2 class="hide">About</h2>
-    <section class="about_title small-10 small-offset-1 cell">
+    <section class="about_title small-10 cell">
         <h3>I am a front end developer based in London, Ontario.</h3>
     </section>
-    <section class="small-10 small-offset-1 cell">
+    <section class="small-10 cell">
         <p>I graduated from Western University finance program. Right now I am an interactive media design student at Fanshawe College. </p>
     </section>
 </div>
