minor adjustments for header

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -30,13 +30,11 @@
         <nav>
             <h2 class="hide">Main Nav</h2>
             <ul>
-                <li><a href="#">apple</a></li>
-                <li><a href="#">banana</a></li>
-                <li><a href="#">orange</a></li>
-                <li><a href="#">peach</a></li>
-                <li><a href="#">watermelon</a></li>
-                <li><a href="#">avocado</a></li>
-                <li><a href="#">blueberry</a></li>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">contact</a></li>
             </ul>
         </nav>
     </div>
@@ -50,9 +48,9 @@
     </div>
 </div>
 
-<div class="about_container grid-x grid-padding-x">
+<div class="about_container grid-x">
     <h2 class="hide">About</h2>
-    <section class="about_title small-10 cell">
+    <section class="about_title small-10 small-offset-1 cell">
         <h3>I am a front end developer based in London, Ontario.</h3>
     </section>
     <section class="small-10 cell">
