finished about section

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -7,7 +7,7 @@
 <title>S H A N</title>
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="css/app.css">
-<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,800" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -48,12 +48,12 @@
     </div>
 </div>
 
-<div class="about_container grid-x">
+<div class="about_container grid-x grid-margin-x">
     <h2 class="hide">About</h2>
     <section class="about_title small-10 small-offset-1 cell">
         <h3>I am a front end developer based in London, Ontario.</h3>
     </section>
-    <section class="small-10 cell">
+    <section class="about_text small-10 small-offset-1 cell">
         <p>I graduated from Western University finance program. Right now I am an interactive media design student at Fanshawe College. </p>
     </section>
 </div>
