set up development section

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -1,17 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>S H A N</title>
-<link rel="stylesheet" href="css/foundation.css">
-<link rel="stylesheet" href="css/app.css">
-<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
-<link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>S H A N</title>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
 <h1 class="hide">S H A N</h1>
+<!--HEADER-->
 <div class="header_bar_container grid-x">
     <div class="title_wrap small-4 medium-3 large-2 cell">
         <p>home</p>
@@ -48,14 +51,54 @@
     </div>
 </div>
 
+<!--ABOUT-->
 <div class="about_container grid-x grid-margin-x">
     <h2 class="hide">About</h2>
     <section class="about_title small-10 small-offset-1 cell">
         <h3>I am a front end developer based in London, Ontario.</h3>
     </section>
     <section class="about_text small-10 small-offset-1 cell">
-        <p>I graduated from Western University finance program. Right now I am an interactive media design student at Fanshawe College. </p>
+        <p>I graduated from Western University finance program. Right now I am an interactive media design student at
+            Fanshawe College. </p>
     </section>
+</div>
+
+<!--SERVICES-->
+<h2 class="hide">Services</h2>
+<div class="offer grid-x">
+    <h3 class="small-12 cell">what i offer</h3>
+    <div class="small-12 medium-4 cell">
+        <img src="images/development_icon.png" alt="Development">
+        <p>development</p>
+    </div>
+    <div class="small-12 medium-4 cell">
+        <img src="images/camera_icon.png" alt="Photography">
+        <p>photography</p>
+    </div>
+    <div class="small-12 medium-4 cell">
+        <img src="images/design_icon.png" alt="Design">
+        <p>design</p>
+    </div>
+</div>
+
+<div class="dev">
+    <h3>Development</h3>
+    <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sed placerat porta pretium. Donec pellentesque
+        blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum
+        mi, at faucibus lorem egestas ut.</p>
+    <div class="section_hr"></div>
+    <img src="images/development_icon_grey.svg" alt="Development" class="dev_icon_grey">
+    <h4>My language skill</h4>
+    <div class="language_icons">
+        <img src="images/html_icon.png" alt="HTML">
+        <img src="images/css_icon.png" alt="CSS">
+        <img src="images/js_icon.png" alt="JavaScript">
+        <img src="images/sass_icon.png" alt="SASS">
+        <img src="images/git_icon.png" alt="GIT">
+        <img src="images/php_icon.png" alt="PHP">
+        <img src="images/sql_icon.png" alt="SQL">
+        <img src="images/gulp_icon.png" alt="GULP">
+    </div>
 </div>
 
 <script src="js/vendor/jquery.js"></script>
