--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>S H A N</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+<meta charset="UTF-8">
+<meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>S H A N</title>
+<link rel="stylesheet" href="css/foundation.css">
+<link rel="stylesheet" href="css/app.css">
+<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
+<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -80,7 +80,7 @@
         <p>design</p>
     </div>
 </div>
-
+<!--dev-->
 <div class="dev">
     <h3>Development</h3>
     <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sed placerat porta pretium. Donec pellentesque
@@ -100,7 +100,33 @@
         <img src="images/gulp_icon.png" alt="GULP">
     </div>
 </div>
-
+<!--photography-->
+<div class="photography">
+    <h3>Photography</h3>
+    <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+    <div class="section_hr"></div>
+    <img src="images/camera_icon_grey.svg" alt="Photography" class="camera_icon_grey">
+    <h4>My gear</h4>
+    <div class="my_gear">
+        <img src="images/html_icon.png" alt="HTML">
+        <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+    </div>
+</div>
+<!--design-->
+<div class="design">
+    <h3>Design</h3>
+    <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+    <div class="section_hr"></div>
+    <img src="images/design_icon_grey.svg" alt="Design" class="design_icon_grey">
+    <h4>My tool kit</h4>
+    <div class="my_tool_kit">
+        <img src="images/html_icon.png" alt="HTML">
+        <img src="images/css_icon.png" alt="CSS">
+        <img src="images/js_icon.png" alt="JavaScript">
+        <img src="images/sass_icon.png" alt="SASS">
+        <img src="images/git_icon.png" alt="GIT">
+    </div>
+</div>
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
