minor changes for services

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -81,50 +81,52 @@
     </div>
 </div>
 <!--dev-->
-<div class="dev">
-    <h3>Development</h3>
-    <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sed placerat porta pretium. Donec pellentesque
-        blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum
-        mi, at faucibus lorem egestas ut.</p>
-    <div class="section_hr"></div>
-    <img src="images/development_icon_grey.svg" alt="Development" class="dev_icon_grey">
-    <h4>My language skill</h4>
-    <div class="language_icons">
-        <img src="images/html_icon.png" alt="HTML">
-        <img src="images/css_icon.png" alt="CSS">
-        <img src="images/js_icon.png" alt="JavaScript">
-        <img src="images/sass_icon.png" alt="SASS">
-        <img src="images/git_icon.png" alt="GIT">
-        <img src="images/php_icon.png" alt="PHP">
-        <img src="images/sql_icon.png" alt="SQL">
-        <img src="images/gulp_icon.png" alt="GULP">
+<div class="services_container">
+    <div class="dev">
+        <h3>Development</h3>
+        <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sed placerat porta pretium. Donec pellentesque
+            blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum
+            mi, at faucibus lorem egestas ut.</p>
+        <div class="section_hr"></div>
+        <img src="images/development_icon_grey.svg" alt="Development" class="dev_icon_grey">
+        <h4>My language skill</h4>
+        <div class="language_icons">
+            <img src="images/html_icon.png" alt="HTML">
+            <img src="images/css_icon.png" alt="CSS">
+            <img src="images/js_icon.png" alt="JavaScript">
+            <img src="images/sass_icon.png" alt="SASS">
+            <img src="images/git_icon.png" alt="GIT">
+            <img src="images/php_icon.png" alt="PHP">
+            <img src="images/sql_icon.png" alt="SQL">
+            <img src="images/gulp_icon.png" alt="GULP">
+        </div>
     </div>
-</div>
-<!--photography-->
-<div class="photography">
-    <h3>Photography</h3>
-    <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum mi, at faucibus lorem egestas ut.</p>
-    <div class="section_hr"></div>
-    <img src="images/camera_icon_grey.svg" alt="Photography" class="camera_icon_grey">
-    <h4>My gear</h4>
-    <div class="my_gear">
-        <img src="images/html_icon.png" alt="HTML">
+    <!--photography-->
+    <div class="photography">
+        <h3>Photography</h3>
         <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+        <div class="section_hr"></div>
+        <img src="images/camera_icon_grey.svg" alt="Photography" class="camera_icon_grey">
+        <h4>My gear</h4>
+        <div class="my_gear">
+            <img src="images/html_icon.png" alt="HTML">
+            <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+        </div>
     </div>
-</div>
-<!--design-->
-<div class="design">
-    <h3>Design</h3>
-    <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum mi, at faucibus lorem egestas ut.</p>
-    <div class="section_hr"></div>
-    <img src="images/design_icon_grey.svg" alt="Design" class="design_icon_grey">
-    <h4>My tool kit</h4>
-    <div class="my_tool_kit">
-        <img src="images/html_icon.png" alt="HTML">
-        <img src="images/css_icon.png" alt="CSS">
-        <img src="images/js_icon.png" alt="JavaScript">
-        <img src="images/sass_icon.png" alt="SASS">
-        <img src="images/git_icon.png" alt="GIT">
+    <!--design-->
+    <div class="design">
+        <h3>Design</h3>
+        <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+        <div class="section_hr"></div>
+        <img src="images/design_icon_grey.svg" alt="Design" class="design_icon_grey">
+        <h4>My tool kit</h4>
+        <div class="my_tool_kit">
+            <img src="images/html_icon.png" alt="HTML">
+            <img src="images/css_icon.png" alt="CSS">
+            <img src="images/js_icon.png" alt="JavaScript">
+            <img src="images/sass_icon.png" alt="SASS">
+            <img src="images/git_icon.png" alt="GIT">
+        </div>
     </div>
 </div>
 <script src="js/vendor/jquery.js"></script>
