set up strength

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -151,6 +151,11 @@
     <div class="portfolio_wrap"></div>
 </div>
 
+<div class="strength_container">
+    <h3>my strength</h3>
+    <p>Vestibulum non leo sed lorem placerat ultricies. Quisque posuere lorem a risus gravida varius. Integer felis ipsum, imperdiet id ex eget, feugiat rutrum quam. Sed vitae justo ut sapien semper maximus quis ut urna. Duis ultricies mi quis elit blandit, et finibus dui eleifend. In iaculis nibh magna, imperdiet eleifend leo cursus eu.</p>
+</div>
+
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
