--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -151,10 +151,32 @@
     <div class="portfolio_wrap"></div>
 </div>
 
+<div class="contact_form_container">
+    <h3>shoot me a message!</h3>
+    <form action="">
+        <div class="form_element">
+            <label for="name" class="form_label">Name</label>
+            <input type="text" name="name" class="form_input">
+        </div>
+        <div class="form_element">
+            <label for="email" class="form_label">Email</label>
+            <input type="email" name="email" class="form_input">
+        </div>
+        <div class="form_element">
+            <label for="comment" class="form_label">Comment</label>
+            <input type="text" name="comment" class="form_input">
+        </div>
+    </form>
+
+    <button>submit</button>
+
+</div>
+
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
 <script src="js/app.js"></script>
 <script src="js/header.js"></script>
+<script src="js/form.js"></script>
 </body>
 </html>
