--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -151,6 +151,22 @@
     <div class="portfolio_wrap"></div>
 </div>
 
+<footer class="main_footer grid-x">
+    <div class="footer_logo_wrap cell">
+        <img src="images/shan-logo-3.0-name-white.svg" alt="Logo">
+    </div>
+    <div class="social_media cell">
+        <img src="images/ins.png" alt="Instagram">
+        <img src="images/github.png" alt="GitHub">
+        <img src="images/behance.png" alt="Behance">
+        <img src="images/linkedin.png" alt="LinkedIn">
+    </div>
+    <div class="copyright cell">
+        <p><span class="fa fa-copyright"></span> 2017 Shan Jiang</p>
+    </div>
+</footer>
+
+<script src="https://use.fontawesome.com/372ea690b0.js"></script>
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
