tablet media queries

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -16,7 +16,7 @@
 <h1 class="hide">S H A N</h1>
 <div class="header_bar_container grid-x">
     <div class="title_wrap small-4 medium-3 large-2 cell">
-        <p>home</p>
+        <p class="fa fa-envelope-o"></p>
     </div>
     <div class="logo_wrap small-4 medium-6 large-8 cell">
         <img src="images/shan-logo-3.0-name-white.svg" alt="SHAN Logo" id="header_logo">
@@ -53,16 +53,20 @@
 <div class="about_container grid-x grid-margin-x">
     <h2 class="hide">About</h2>
     <section class="about_title small-10 small-offset-1 cell">
-        <h3>I am a front end developer based in London, Ontario.</h3>
+        <h3>I am a London, Ontario based front-end developer with the passion of web development and graphic
+            design.</h3>
     </section>
     <section class="about_text small-10 small-offset-1 cell">
-        <p>I graduated from Western University finance program. Right now I am an interactive media design student at
-            Fanshawe College. </p>
+        <p>I am currently an interactive media student at Fanshawe College. I can develop and design websites and also
+            be a professional photographer. I have a degree in Management and Organizational Studies from the University
+            of Western Ontario. The diverse educational background makes me have the better capability of doing work. I
+            am also a current web developer intern at Northern Commerce.</p>
     </section>
 </div>
 
-<h2 class="hide">Services</h2>
+
 <div class="offer grid-x">
+    <h2 class="hide">Services</h2>
     <h3 class="small-12 cell">what i offer</h3>
     <div class="small-12 medium-4 cell">
         <img src="images/development_icon.png" alt="Development">
@@ -78,17 +82,21 @@
     </div>
 </div>
 <div class="services_container">
-    <div class="dev">
-        <h3>Development</h3>
-        <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sed placerat porta pretium. Donec
+    <div class="dev grid-x">
+        <h3 class="cell">Development</h3>
+        <p class="cell medium-10 medium-offset-1">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sed
+            placerat porta pretium. Donec
             pellentesque
             blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum
             vestibulum
             mi, at faucibus lorem egestas ut.</p>
-        <div class="section_hr"></div>
-        <img src="images/development_icon_grey.svg" alt="Development" class="dev_icon_grey">
-        <h4>My language skill</h4>
-        <div class="language_icons">
+        <div class="section_hr cell"></div>
+        <div class="icon_wrap cell">
+            <img src="images/development_icon_grey.svg" alt="Development" class="dev_icon_grey hide-for-medium-only">
+            <img src="images/macbook.png" alt="MacBook Pro" class="macbook show-for-medium">
+        </div>
+        <h4 class="cell">My language skill</h4>
+        <div class="language_icons cell medium-8 medium-offset-2">
             <img src="images/html_icon.png" alt="HTML">
             <img src="images/css_icon.png" alt="CSS">
             <img src="images/js_icon.png" alt="JavaScript">
@@ -99,30 +107,38 @@
             <img src="images/gulp_icon.png" alt="GULP">
         </div>
     </div>
-    <div class="photography">
-        <h3>Photography</h3>
-        <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec
+    <div class="photography grid-x">
+        <h3 class="cell">Photography</h3>
+        <p class="cell medium-10 medium-offset-1">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros.
+            Sevd placerat porta pretium. Donec
             pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
             elementum vestibulum mi, at faucibus lorem egestas ut.</p>
-        <div class="section_hr"></div>
-        <img src="images/camera_icon_grey.svg" alt="Photography" class="camera_icon_grey">
-        <h4>My gear</h4>
-        <div class="my_gear">
+        <div class="section_hr cell"></div>
+        <div class="icon_wrap cell">
+            <img src="images/camera_icon_grey.svg" alt="Photography" class="camera_icon_grey hide-for-medium-only">
+            <img src="images/camera.png" alt="Camera" class="camera show-for-medium">
+        </div>
+        <h4 class="cell">My gear</h4>
+        <div class="my_gear cell medium-10 medium-offset-1">
             <img src="images/lr_icon.png" alt="HTML">
             <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec
                 pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
                 elementum vestibulum mi, at faucibus lorem egestas ut.</p>
         </div>
     </div>
-    <div class="design">
-        <h3>Design</h3>
-        <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec
+    <div class="design grid-x">
+        <h3 class="cell">Design</h3>
+        <p class="cell medium-10 medium-offset-1">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros.
+            Sevd placerat porta pretium. Donec
             pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
             elementum vestibulum mi, at faucibus lorem egestas ut.</p>
-        <div class="section_hr"></div>
-        <img src="images/design_icon_grey.svg" alt="Design" class="design_icon_grey">
-        <h4>My tool kit</h4>
-        <div class="my_tool_kit">
+        <div class="section_hr cell"></div>
+        <div class="icon_wrap cell">
+            <img src="images/design_icon_grey.svg" alt="Design" class="design_icon_grey hide-for-medium-only">
+            <img src="images/name_card.png" alt="Name Card" class="name_card show-for-medium">
+        </div>
+        <h4 class="cell">My tool kit</h4>
+        <div class="my_tool_kit cell medium-10 medium-offset-1">
             <img src="images/ps_icon.png" alt="HTML">
             <img src="images/ai_icon.png" alt="CSS">
             <img src="images/ae_icon.png" alt="JavaScript">
@@ -132,29 +148,37 @@
     </div>
 </div>
 
-<div class="portfolio_container">
-    <div class="portfolio_description">
+<div class="portfolio_container grid-x">
+    <div class="portfolio_description cell medium-10 medium-offset-1">
         <h2>portfolio</h2>
         <div class="section_hr"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis congue justo. In ornare dui at interdum
             placerat. Aliquam aliquam nunc ex, ut tempor ante accumsan sit amet.</p>
     </div>
-    <div class="portfolio_wrap"></div>
-    <div class="portfolio_wrap"></div>
-    <div class="portfolio_wrap"></div>
+    <div class="portfolio_wrap cell medium-4"></div>
+    <div class="portfolio_wrap cell medium-4"></div>
+    <div class="portfolio_wrap cell medium-4"></div>
+    <div class="portfolio_wrap cell medium-4 hide-for-small-only"></div>
+    <div class="portfolio_wrap cell medium-4 hide-for-small-only"></div>
+    <div class="portfolio_wrap cell medium-4 hide-for-small-only"></div>
 </div>
 
-<div class="strength_container">
-    <h2>my strength</h2>
-    <p>Vestibulum non leo sed lorem placerat ultricies. Quisque posuere lorem a risus gravida varius. Integer felis
+<div class="strength_container grid-x">
+    <h2 class="cell">my strength</h2>
+    <div class="section_hr cell"></div>
+    <div class="profile_wrap cell">
+        <img src="images/profile.jpg" alt="Profile Photo">
+    </div>
+    <p class="cell medium-10 medium-offset-1">Vestibulum non leo sed lorem placerat ultricies. Quisque posuere lorem a
+        risus gravida varius. Integer felis
         ipsum, imperdiet id ex eget, feugiat rutrum quam. Sed vitae justo ut sapien semper maximus quis ut urna. Duis
         ultricies mi quis elit blandit, et finibus dui eleifend. In iaculis nibh magna, imperdiet eleifend leo cursus
         eu.</p>
 </div>
 
-<div class="contact_form_container">
-    <h2>shoot me a message!</h2>
-    <form action="">
+<div class="contact_form_container grid-x">
+    <h2 class="cell">shoot me a message!</h2>
+    <form action="" class="cell medium-10 medium-offset-1">
         <div class="form_element">
             <label for="name" class="form_label">Name</label>
             <input type="text" name="name" class="form_input">
