fixed ghost white space bug

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -192,7 +192,10 @@
             <input type="text" name="comment" class="form_input">
         </div>
     </form>
-    <button>submit</button>
+    <div class="cell">
+        <button>submit</button>
+    </div>
+
 </div>
 
 <footer class="main_footer grid-x">
