--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -52,18 +52,18 @@
 
 <div class="about_container grid-x grid-margin-x">
     <h2 class="hide">About</h2>
-    <section class="about_title small-10 small-offset-1 cell">
+    <section class="about_title small-10 small-offset-1 large-6 large-offset-1 cell">
         <h3>I am a London, Ontario based front-end developer with the passion of web development and graphic
             design.</h3>
+        <div class="section_hr show-for-large"></div>
     </section>
-    <section class="about_text small-10 small-offset-1 cell">
+    <section class="about_text small-10 small-offset-1 large-4 large-offset-0 cell">
         <p>I am currently an interactive media student at Fanshawe College. I can develop and design websites and also
             be a professional photographer. I have a degree in Management and Organizational Studies from the University
             of Western Ontario. The diverse educational background makes me have the better capability of doing work. I
             am also a current web developer intern at Northern Commerce.</p>
     </section>
 </div>
-
 
 <div class="offer grid-x">
     <h2 class="hide">Services</h2>
@@ -81,22 +81,27 @@
         <p>design</p>
     </div>
 </div>
-<div class="services_container">
-    <div class="dev grid-x">
-        <h3 class="cell">Development</h3>
-        <p class="cell medium-10 medium-offset-1">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sed
+
+<div class="services_container grid-x">
+    <div class="cell large-4 show-for-large"></div>
+    <div class="dev grid-x cell large-8">
+        <h3 class="cell large-6 large-offset-5">Development</h3>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">Nunc velit arcu, porta sit amet nisl non,
+            semper consectetur eros. Sed
             placerat porta pretium. Donec
             pellentesque
             blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum
             vestibulum
             mi, at faucibus lorem egestas ut.</p>
-        <div class="section_hr cell"></div>
-        <div class="icon_wrap cell">
-            <img src="images/development_icon_grey.svg" alt="Development" class="dev_icon_grey hide-for-medium-only">
-            <img src="images/macbook.png" alt="MacBook Pro" class="macbook show-for-medium">
+        <div class="cell large-6 large-offset-5">
+            <div class="section_hr"></div>
         </div>
-        <h4 class="cell">My language skill</h4>
-        <div class="language_icons cell medium-8 medium-offset-2">
+        <div class="icon_wrap cell">
+            <img src="images/macbook.png" alt="MacBook Pro" class="macbook show-for-medium">
+            <img src="images/development_icon_grey.svg" alt="Development" class="dev_icon_grey hide-for-medium-only">
+        </div>
+        <h4 class="cell large-8 large-offset-2">My language skill</h4>
+        <div class="language_icons cell medium-8 medium-offset-2 large-6">
             <img src="images/html_icon.png" alt="HTML">
             <img src="images/css_icon.png" alt="CSS">
             <img src="images/js_icon.png" alt="JavaScript">
@@ -107,43 +112,48 @@
             <img src="images/gulp_icon.png" alt="GULP">
         </div>
     </div>
-    <div class="photography grid-x">
-        <h3 class="cell">Photography</h3>
-        <p class="cell medium-10 medium-offset-1">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros.
+    <div class="design grid-x cell large-8">
+        <h3 class="cell large-10 large-offset-2">Design</h3>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros.
             Sevd placerat porta pretium. Donec
             pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
             elementum vestibulum mi, at faucibus lorem egestas ut.</p>
-        <div class="section_hr cell"></div>
-        <div class="icon_wrap cell">
-            <img src="images/camera_icon_grey.svg" alt="Photography" class="camera_icon_grey hide-for-medium-only">
-            <img src="images/camera.png" alt="Camera" class="camera show-for-medium">
+        <div class="cell large-10 large-offset-2">
+            <div class="section_hr"></div>
         </div>
-        <h4 class="cell">My gear</h4>
-        <div class="my_gear cell medium-10 medium-offset-1">
-            <img src="images/lr_icon.png" alt="HTML">
-            <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec
-                pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
-                elementum vestibulum mi, at faucibus lorem egestas ut.</p>
-        </div>
-    </div>
-    <div class="design grid-x">
-        <h3 class="cell">Design</h3>
-        <p class="cell medium-10 medium-offset-1">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros.
-            Sevd placerat porta pretium. Donec
-            pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
-            elementum vestibulum mi, at faucibus lorem egestas ut.</p>
-        <div class="section_hr cell"></div>
         <div class="icon_wrap cell">
             <img src="images/design_icon_grey.svg" alt="Design" class="design_icon_grey hide-for-medium-only">
             <img src="images/name_card.png" alt="Name Card" class="name_card show-for-medium">
         </div>
-        <h4 class="cell">My tool kit</h4>
-        <div class="my_tool_kit cell medium-10 medium-offset-1">
+        <h4 class="cell large-10 large-offset-2">My tool kit</h4>
+        <div class="my_tool_kit cell medium-10 medium-offset-1 large-10 large-offset-2">
             <img src="images/ps_icon.png" alt="HTML">
             <img src="images/ai_icon.png" alt="CSS">
             <img src="images/ae_icon.png" alt="JavaScript">
             <img src="images/lr_icon.png" alt="SASS">
             <img src="images/c4d_icon.png" alt="GIT">
+        </div>
+    </div>
+    <div class="cell large-4 show-for-large"></div><div class="cell large-4 show-for-large"></div>
+    <div class="photography grid-x cell large-8">
+        <h3 class="cell large-10 large-offset-2">Photography</h3>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros.
+            Sevd placerat porta pretium. Donec
+            pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
+            elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+        <div class="cell large-10 large-offset-2">
+            <div class="section_hr"></div>
+        </div>
+        <div class="icon_wrap cell">
+            <img src="images/camera.png" alt="Camera" class="camera show-for-medium">
+            <img src="images/camera_icon_grey.svg" alt="Photography" class="camera_icon_grey hide-for-medium-only">
+        </div>
+        <h4 class="cell large-10 large-offset-2">My gear</h4>
+        <div class="my_gear cell medium-10 medium-offset-1 large-9 large-offset-2">
+            <img src="images/lr_icon.png" alt="HTML">
+            <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec
+                pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
+                elementum vestibulum mi, at faucibus lorem egestas ut.</p>
         </div>
     </div>
 </div>
@@ -178,7 +188,7 @@
 
 <div class="contact_form_container grid-x">
     <h2 class="cell">shoot me a message!</h2>
-    <form action="" class="cell medium-10 medium-offset-1">
+    <form action="" class="cell medium-10 medium-offset-1 large-6 large-offset-3">
         <div class="form_element">
             <label for="name" class="form_label">Name</label>
             <input type="text" name="name" class="form_input">
