--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -114,7 +114,8 @@
     </div>
     <div class="design grid-x cell large-8">
         <h3 class="cell large-10 large-offset-2">Design</h3>
-        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros.
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">Nunc velit arcu, porta sit amet nisl non,
+            semper consectetur eros.
             Sevd placerat porta pretium. Donec
             pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
             elementum vestibulum mi, at faucibus lorem egestas ut.</p>
@@ -134,10 +135,12 @@
             <img src="images/c4d_icon.png" alt="GIT">
         </div>
     </div>
-    <div class="cell large-4 show-for-large"></div><div class="cell large-4 show-for-large"></div>
+    <div class="cell large-4 show-for-large"></div>
+    <div class="cell large-4 show-for-large"></div>
     <div class="photography grid-x cell large-8">
         <h3 class="cell large-10 large-offset-2">Photography</h3>
-        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">Nunc velit arcu, porta sit amet nisl non, semper consectetur eros.
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">Nunc velit arcu, porta sit amet nisl non,
+            semper consectetur eros.
             Sevd placerat porta pretium. Donec
             pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
             elementum vestibulum mi, at faucibus lorem egestas ut.</p>
