get ready for form php

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -69,15 +69,15 @@
     <h2 class="hide">Services</h2>
     <h3 class="small-12 cell">what i offer</h3>
     <div class="small-12 medium-4 cell">
-        <img src="images/development_icon.png" alt="Development">
+        <img src="images/development_icon.svg" alt="Development">
         <p>development</p>
     </div>
     <div class="small-12 medium-4 cell">
-        <img src="images/camera_icon.png" alt="Photography">
+        <img src="images/camera_icon.svg" alt="Photography">
         <p>photography</p>
     </div>
     <div class="small-12 medium-4 cell">
-        <img src="images/design_icon.png" alt="Design">
+        <img src="images/design_icon.svg" alt="Design">
         <p>design</p>
     </div>
 </div>
@@ -102,14 +102,14 @@
         </div>
         <h4 class="cell large-8 large-offset-2">My language skill</h4>
         <div class="language_icons cell medium-8 medium-offset-2 large-6">
-            <img src="images/html_icon.png" alt="HTML">
-            <img src="images/css_icon.png" alt="CSS">
-            <img src="images/js_icon.png" alt="JavaScript">
-            <img src="images/sass_icon.png" alt="SASS">
-            <img src="images/git_icon.png" alt="GIT">
-            <img src="images/php_icon.png" alt="PHP">
-            <img src="images/sql_icon.png" alt="SQL">
-            <img src="images/gulp_icon.png" alt="GULP">
+            <img src="images/html_icon.svg" alt="HTML">
+            <img src="images/css_icon.svg" alt="CSS">
+            <img src="images/js_icon.svg" alt="JavaScript">
+            <img src="images/sass_icon.svg" alt="SASS">
+            <img src="images/git_icon.svg" alt="GIT">
+            <img src="images/php_icon.svg" alt="PHP">
+            <img src="images/sql_icon.svg" alt="SQL">
+            <img src="images/gulp_icon.svg" alt="GULP">
         </div>
     </div>
     <div class="design grid-x cell large-8">
@@ -128,11 +128,11 @@
         </div>
         <h4 class="cell large-10 large-offset-2">My tool kit</h4>
         <div class="my_tool_kit cell medium-10 medium-offset-1 large-10 large-offset-2">
-            <img src="images/ps_icon.png" alt="HTML">
-            <img src="images/ai_icon.png" alt="CSS">
-            <img src="images/ae_icon.png" alt="JavaScript">
-            <img src="images/lr_icon.png" alt="SASS">
-            <img src="images/c4d_icon.png" alt="GIT">
+            <img src="images/ps_icon.svg" alt="Photoshop">
+            <img src="images/ai_icon.svg" alt="Illustrator">
+            <img src="images/ae_icon.svg" alt="AfterEffects">
+            <img src="images/lr_icon.svg" alt="Lightroom">
+            <img src="images/c4d_icon.svg" alt="Cinema 4D">
         </div>
     </div>
     <div class="cell large-4 show-for-large"></div>
@@ -153,7 +153,7 @@
         </div>
         <h4 class="cell large-10 large-offset-2">My gear</h4>
         <div class="my_gear cell medium-10 medium-offset-1 large-9 large-offset-2">
-            <img src="images/lr_icon.png" alt="HTML">
+            <img src="images/lr_icon.svg" alt="Lightroom">
             <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec
                 pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
                 elementum vestibulum mi, at faucibus lorem egestas ut.</p>
@@ -191,24 +191,23 @@
 
 <div class="contact_form_container grid-x">
     <h2 class="cell">shoot me a message!</h2>
-    <form action="" class="cell medium-10 medium-offset-1 large-6 large-offset-3">
+    <form method="post" action="form.php" class="cell medium-10 medium-offset-1 large-6 large-offset-3">
         <div class="form_element">
             <label for="name" class="form_label">Name</label>
-            <input type="text" name="name" class="form_input">
+            <input type="text" name="name" id="name" class="form_input">
         </div>
         <div class="form_element">
             <label for="email" class="form_label">Email</label>
-            <input type="email" name="email" class="form_input">
+            <input type="email" name="email" id="email" class="form_input">
         </div>
         <div class="form_element">
             <label for="comment" class="form_label">Comment</label>
-            <input type="text" name="comment" class="form_input">
+            <input type="text" name="comment" id="comment" class="form_input">
         </div>
     </form>
     <div class="cell">
-        <button>submit</button>
+        <button id="submit" name="submit" type="submit">submit</button>
     </div>
-
 </div>
 
 <footer class="main_footer grid-x">
@@ -216,13 +215,13 @@
         <img src="images/shan-logo-3.0-name-white.svg" alt="Logo">
     </div>
     <div class="social_media cell">
-        <img src="images/ins.png" alt="Instagram">
-        <img src="images/github.png" alt="GitHub">
-        <img src="images/behance.png" alt="Behance">
-        <img src="images/linkedin.png" alt="LinkedIn">
+        <img src="images/ins.svg" alt="Instagram">
+        <img src="images/github.svg" alt="GitHub">
+        <img src="images/behance.svg" alt="Behance">
+        <img src="images/linkedin.svg" alt="LinkedIn">
     </div>
     <div class="copyright cell">
-        <p><span class="fa fa-copyright"></span> 2017 Shan Jiang</p>
+        <p><span class="fa fa-copyright"></span> 2018 Shan Jiang</p>
     </div>
 </footer>
 
