--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -191,23 +191,21 @@
 
 <div class="contact_form_container grid-x">
     <h2 class="cell">shoot me a message!</h2>
-    <form method="post" action="form.php" class="cell medium-10 medium-offset-1 large-6 large-offset-3">
+    <form method="POST" action="mail.php" class="cell medium-10 medium-offset-1 large-6 large-offset-3">
         <div class="form_element">
             <label for="name" class="form_label">Name</label>
-            <input type="text" name="name" id="name" class="form_input">
+            <input type="text" name="user_name" id="name" class="form_input">
         </div>
         <div class="form_element">
             <label for="email" class="form_label">Email</label>
-            <input type="email" name="email" id="email" class="form_input">
+            <input type="email" name="user_email" id="email" class="form_input">
         </div>
         <div class="form_element">
             <label for="comment" class="form_label">Comment</label>
-            <input type="text" name="comment" id="comment" class="form_input">
+            <input type="text" name="user_message" id="comment" class="form_input">
         </div>
+        <input id="submit" name="submit" type="submit" value="submit">
     </form>
-    <div class="cell">
-        <button id="submit" name="submit" type="submit">submit</button>
-    </div>
 </div>
 
 <footer class="main_footer grid-x">
